Fix footer spacing

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -10,7 +10,8 @@ pre, code {
 footer {
   font-size: 0.75em;
   text-align: center;
-  text-indent: 0;
+  
+  p { text-indent: 0; }
 }
 
 h1, h2 { text-transform: uppercase; }
